--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "moment": "^2.24.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-datepicker": "^1.7.2",
     "react-native-effects-view": "^0.4.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-ionicons": "^4.5.6",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-modal": "^11.0.1",
     "react-native-navigation": "^2.21.0",
     "react-native-size-matters": "^0.2.1",
+    "react-native-vector-icons": "^6.4.2",
+    "react-native-webview": "^5.11.0",
     "react-navigation": "^3.11.0",
     "react-navigation-redux-helpers": "^3.0.2",
     "react-redux": "^7.0.3",
